Fix quiz page margins

--- a/app/clickQuiz/clickQuiz.html
+++ b/app/clickQuiz/clickQuiz.html
@@ -1,6 +1,7 @@
 <div class="container-fluid" layout="row" ng-cloak flex>
   <div quiz></div>
   <span flex></span>
+  <!--  Maybe eventually pull from JSON with questions  -->
   <div hide show-gt-sm>
     <img src="../assets/click8.jpg" />
   </div>
