--- a/clickAbout/clickAbout.html
+++ b/clickAbout/clickAbout.html
@@ -1,5 +1,5 @@
 <div ng-controller="ClickAboutCtrl" id="click_about" flex ng-cloak layout-align="center center">
   <center hide show-gt-md>
-    <iframe width="960" height="720" src="https://www.youtube.com/embed/ljLC-m4z7EM?rel=0&amp;controls=2" frameborder="0" allowfullscreen></iframe>
+    <iframe id="ytplayer" type="text/html" width="960" height="720" src="https://www.youtube.com/embed/ljLC-m4z7EM?rel=0&amp;controls=2" frameborder="0"/>
   </center>
 </div>
