--- a/app/clickFacts/clickFacts.html
+++ b/app/clickFacts/clickFacts.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style/main.css">
+
 <div ng-controller="ClickFactsCtrl as facts" id="click_facts" ng-cloak layout-wrap>
   <section class="factSheet" layout="row" layout-wrap layout-align="center">
     <div class="flip" layout="row" layout-xs="column" layout-wrap>
