--- a/app/clickQuiz/clickQuiz.html
+++ b/app/clickQuiz/clickQuiz.html
@@ -1,8 +1,10 @@
+<link rel="stylesheet" href="style/quiz.css">
+
 <div class="container-fluid" layout="row" ng-cloak flex>
   <div quiz></div>
   <span flex></span>
   <!--  Maybe eventually pull from JSON with questions  -->
   <div hide show-gt-sm>
-    <img src="../assets/click8.jpg" />
+    <img src="/assets/click8.jpg" />
   </div>
 </div>
