--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
 
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="style/main.css">
 </head>
 
 <body ng-controller="AppCtrl" ng-app="clickApp" layout="row" ng-cloak>
