--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/angular-material-icons/0.6.0/angular-material-icons.min.js"></script>
 
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="style/main.css">
 </head>
 
-<body>
+<body ng-controller="AppCtrl" ng-app="clickApp" layout="row" ng-cloak>
 
-  <div ng-controller="AppCtrl" ng-app="clickApp" layout="row" ng-cloak layout-fill>
+  <div layout="row" layout-fill>
     <md-sidenav layout="column" class="md-sidenav" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
       <!--      There's got to be a better way to center this button -->
       <section layout="column navBtn" ng-click="toggleLeft()" layout-align="center center">
@@ -42,7 +42,6 @@
         <md-button class="navBtn" ng-click="toggleLeft()" ng-href="#/clickHome">Home</md-button>
         <md-button class="navBtn" ng-click="toggleLeft()" ng-href="#/clickQuiz">Quiz</md-button>
         <md-button class="navBtn" ng-click="toggleLeft()" ng-href="#/clickFacts">Facts</md-button>
-        <md-button class="navBtn" ng-click="toggleLeft()" ng-href="#/clickGame">Game</md-button>
         <md-button class="navBtn" ng-click="toggleLeft()" ng-href="#/clickAbout">About</md-button>
       </section>
     </md-sidenav>
@@ -71,7 +70,6 @@
   <script src="clickQuiz/clickQuiz.js"></script>
   <script src="clickFacts/clickFacts.js"></script>
   <script src="clickAbout/clickAbout.js"></script>
-  <script src="clickGame/clickGame.js"></script>
 
 </body>
 
